--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- EDITAR: Cambia el título y la descripción del sitio -->
-    <title>Hepta Arquitectura | Estudio de Arquitectura</title>
-    <meta name="description" content="Nos apasiona crear espacios armoniosos, innovadores y funcionales.">
+    <title>Pixels  | Fotografia y Video</title>
+    <meta name="description" content="Nos apasiona capturar emociones, miradas y sonrisas que cuentan historias únicas.">
 
     <!-- Fuentes de Google (Poppins) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -159,7 +159,7 @@
             color: white;
             padding: 0 20px;
             /* EDITAR: Cambia la URL por la de tu imagen de fondo principal */
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1542838132-92c53300491e?q=80&w=2874&auto=format&fit=crop') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://res.cloudinary.com/dgo3agrzb/image/upload/v1756333181/DSC_1060_vfp28n.jpg') no-repeat center center/cover;
         }
 
         .hero-text h1 {
@@ -612,4 +612,5 @@
     });
     </script>
 </body>
+
 </html>
