--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
         <section id="inicio">
             <div class="hero-text">
                 <h1>
-                    Nos apasiona crear espacios
+                    Nos apasiona capturar
                     <br>
                     <span id="typing-text" class="dynamic-text"></span><span class="cursor"></span>
                 </h1>
@@ -614,3 +614,4 @@
 </body>
 
 </html>
+
