--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
         const typingTextSpan = document.querySelector("#typing-text");
         const cursorSpan = document.querySelector(".cursor");
         // EDITAR: Cambia las palabras aquí para la animación
-        const words = ["emociones.", "miradas.", "Momentos irrepetibles.", "que cuentan historias únicas"];
+        const words = ["emociones.", "miradas.", "Momentos irrepetibles.", "que cuentan historias únicas."];
         const typingDelay = 120;
         const erasingDelay = 80;
         const newWordDelay = 2000;
@@ -614,5 +614,6 @@
 </body>
 
 </html>
+
 
 
