--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
                 <div class="nosotros-texto">
                     <h2>Nosotros</h2>
                     <h3>Somos un equipo multidisciplinar que vive y siente la arquitectura.</h3>
-                    <p>En Hepta Arquitectura, creemos que cada proyecto es una oportunidad para crear espacios que inspiran y mejoran la vida de las personas. Nuestro enfoque se basa en la colaboración, la innovación y un profundo respeto por el entorno.</p>
-                    <p>Desde viviendas unifamiliares hasta complejos comerciales, abordamos cada desafío con la misma pasión y dedicación, buscando siempre la excelencia en el diseño y la ejecución.</p>
+                    <p>En Pixels, creamos recuerdos que trascienden el tiempo. Instantes que no sólo se capturan, se sienten, revelando la armonía perfecta entre emoción y belleza.</p>
+                    <p>Cada fotografía es más que una imagen: es un reflejo de lo vivido, una memoria eterna que transforma la manera en que recordamos el amor y las historias que nos definen.</p>
                 </div>
                 <div class="nosotros-imagen">
                     <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?q=80&w=3048&auto=format&fit=crop" alt="Equipo de Hepta Arquitectura">
@@ -614,6 +614,7 @@
 </body>
 
 </html>
+
 
 
 
