--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             <div class="container">
                 <div class="nosotros-texto">
                     <h2>Nosotros</h2>
-                    <h3>Somos un equipo multidisciplinar que vive y siente la arquitectura.</h3>
+                    <h3>Somos un equipo multidisciplinar que vive y siente la fotografia.</h3>
                     <p>En Pixels, creamos recuerdos que trascienden el tiempo. Instantes que no sólo se capturan, se sienten, revelando la armonía perfecta entre emoción y belleza.</p>
                     <p>Cada fotografía es más que una imagen: es un reflejo de lo vivido, una memoria eterna que transforma la manera en que recordamos el amor y las historias que nos definen.</p>
                 </div>
@@ -614,6 +614,7 @@
 </body>
 
 </html>
+
 
 
 
